LexYacc/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID save_program SEMICOLON altprogram
Rule 2     altprogram -> class altprogram
Rule 3     altprogram -> var altprogram
Rule 4     altprogram -> function altprogram
Rule 5     altprogram -> main remove_class_scope
Rule 6     save_program -> <empty>
Rule 7     main -> MAIN save_main OPENPAREN CLOSEPAREN OPENCURLY altmain
Rule 8     altmain -> var altmain
Rule 9     altmain -> estatuto altmain
Rule 10    altmain -> CLOSECURLY
Rule 11    save_main -> <empty>
Rule 12    class -> CLASS ID altclass save_class OPENCURLY alt2class
Rule 13    altclass -> TWODOTS ID
Rule 14    altclass -> empty
Rule 15    alt2class -> var alt2class
Rule 16    alt2class -> function alt2class
Rule 17    alt2class -> constructor CLOSECURLY SEMICOLON remove_class_scope
Rule 18    save_class -> <empty>
Rule 19    remove_class_scope -> <empty>
Rule 20    constructor -> CONSTRUCTOR save_constructor OPENPAREN altconst store_params CLOSEPAREN OPENCURLY alt2const
Rule 21    altconst -> params
Rule 22    altconst -> empty
Rule 23    alt2const -> var alt2const
Rule 24    alt2const -> estatuto alt2const
Rule 25    alt2const -> CLOSECURLY
Rule 26    save_constructor -> <empty>
Rule 27    var -> VAR listids TWODOTS type save_vars SEMICOLON
Rule 28    save_vars -> <empty>
Rule 29    listids -> ID save_var_name array listidsalty
Rule 30    listidsalty -> COMMA listids
Rule 31    listidsalty -> empty
Rule 32    array -> OPENBRACKET expresion CLOSEBRACKET empty_pv array2
Rule 33    array -> empty
Rule 34    array2 -> OPENBRACKET expresion CLOSEBRACKET empty_pv
Rule 35    array2 -> empty
Rule 36    save_var_name -> <empty>
Rule 37    function -> FUNC ID OPENPAREN altfunc CLOSEPAREN alt2func save_function store_params OPENCURLY alt3func
Rule 38    altfunc -> params
Rule 39    altfunc -> empty
Rule 40    alt2func -> TWODOTS type
Rule 41    alt2func -> empty
Rule 42    alt3func -> var alt3func
Rule 43    alt3func -> estatuto alt3func
Rule 44    alt3func -> CLOSECURLY remove_function_scope
Rule 45    save_function -> <empty>
Rule 46    store_params -> <empty>
Rule 47    remove_function_scope -> <empty>
Rule 48    params -> ID TWODOTS type save_params altparams
Rule 49    altparams -> COMMA ID TWODOTS type save_params altparams
Rule 50    altparams -> empty
Rule 51    save_params -> <empty>
Rule 52    callfunc -> ID OPENPAREN altcall CLOSEPAREN
Rule 53    altcall -> expresion alt2call
Rule 54    altcall -> empty
Rule 55    alt2call -> COMMA altcall
Rule 56    alt2call -> empty
Rule 57    type -> INT
Rule 58    type -> FLOAT
Rule 59    type -> STRING
Rule 60    type -> ID
Rule 61    type -> BOOL
Rule 62    estatuto -> assign empty_pv
Rule 63    estatuto -> condition empty_pv
Rule 64    estatuto -> write empty_pv
Rule 65    estatuto -> read empty_pv
Rule 66    estatuto -> return empty_pv
Rule 67    estatuto -> voidcall empty_pv
Rule 68    estatuto -> while empty_pv
Rule 69    voidcall -> ID OPENPAREN CLOSEPAREN
Rule 70    voidcall -> ID OPENPAREN expresion altcall
Rule 71    altcall -> COMMA expresion altcall
Rule 72    altcall -> CLOSEPAREN SEMICOLON
Rule 73    empty_pv -> <empty>
Rule 74    while -> WHILE OPENPAREN expresion CLOSEPAREN OPENCURLY altwhile
Rule 75    altwhile -> estatuto altwhile
Rule 76    altwhile -> CLOSECURLY
Rule 77    varcall -> varcte save_const
Rule 78    varcall -> varcomplicated save_comp
Rule 79    varcte -> TRUE
Rule 80    varcte -> FALSE
Rule 81    varcte -> CTEFLOAT
Rule 82    varcte -> CTESTRING
Rule 83    varcte -> CTEINT
Rule 84    varcomplicated -> varcomp1
Rule 85    varcomplicated -> callfunc
Rule 86    varcomp1 -> ID varcomp2
Rule 87    varcomp2 -> DOT varcomp3
Rule 88    varcomp2 -> empty
Rule 89    varcomp3 -> varcomp1
Rule 90    varcomp3 -> callfunc
Rule 91    save_const -> <empty>
Rule 92    save_comp -> <empty>
Rule 93    expresion -> exp altexpresion
Rule 94    altexpresion -> altexpresion2 save_op exp
Rule 95    altexpresion -> empty
Rule 96    altexpresion2 -> SAMEAS
Rule 97    altexpresion2 -> BIGGERTHAN
Rule 98    altexpresion2 -> BIGGEREQUALSTHAN
Rule 99    altexpresion2 -> SMALLTHAN
Rule 100   altexpresion2 -> SMALLEQUALSTHAN
Rule 101   altexpresion2 -> DIFFERENTTHAN
Rule 102   altexpresion2 -> AND
Rule 103   altexpresion2 -> OR
Rule 104   exp -> termino
Rule 105   exp -> termino altexp
Rule 106   altexp -> SUM save_op termino altexp
Rule 107   altexp -> SUBTRACT save_op termino altexp
Rule 108   altexp -> empty
Rule 109   termino -> factor
Rule 110   termino -> factor alttermino
Rule 111   alttermino -> TIMES save_op factor alttermino
Rule 112   alttermino -> DIV save_op factor alttermino
Rule 113   alttermino -> empty
Rule 114   save_op -> <empty>
Rule 115   read -> INPUT save_op OPENPAREN ID save_comp CLOSEPAREN SEMICOLON
Rule 116   write -> OUTPUT save_op OPENPAREN expresion altwrite
Rule 117   altwrite -> COMMA save_op expresion altwrite
Rule 118   altwrite -> CLOSEPAREN SEMICOLON
Rule 119   factor -> OPENPAREN save_op expresion CLOSEPAREN save_op
Rule 120   factor -> varcall
Rule 121   condition -> IF OPENPAREN expresion CLOSEPAREN add_gotof OPENCURLY altcondition add_end_if
Rule 122   condition -> IF OPENPAREN expresion CLOSEPAREN add_gotof OPENCURLY altcondition add_end_if ELSE OPENCURLY altcondition
Rule 123   altcondition -> estatuto altcondition
Rule 124   altcondition -> CLOSECURLY
Rule 125   add_gotof -> <empty>
Rule 126   add_end_if -> <empty>
Rule 127   assign -> ID save_comp EQUALS save_op expresion SEMICOLON
Rule 128   return -> RETURN save_op expresion SEMICOLON
Rule 129   empty -> <empty>

Terminals, with rules where they appear

AND                  : 102
BIGGEREQUALSTHAN     : 98
BIGGERTHAN           : 97
BOOL                 : 61
CLASS                : 12
CLOSEBRACKET         : 32 34
CLOSECURLY           : 10 17 25 44 76 124
CLOSEPAREN           : 7 20 37 52 69 72 74 115 118 119 121 122
COMMA                : 30 49 55 71 117
CONSTRUCTOR          : 20
CTEFLOAT             : 81
CTEINT               : 83
CTESTRING            : 82
DIFFERENTTHAN        : 101
DIV                  : 112
DOT                  : 87
ELSE                 : 122
EQUALS               : 127
FALSE                : 80
FLOAT                : 58
FUNC                 : 37
ID                   : 1 12 13 29 37 48 49 52 60 69 70 86 115 127
IF                   : 121 122
INPUT                : 115
INT                  : 57
MAIN                 : 7
OPENBRACKET          : 32 34
OPENCURLY            : 7 12 20 37 74 121 122 122
OPENPAREN            : 7 20 37 52 69 70 74 115 116 119 121 122
OR                   : 103
OUTPUT               : 116
PROGRAM              : 1
RETURN               : 128
SAMEAS               : 96
SEMICOLON            : 1 17 27 72 115 118 127 128
SMALLEQUALSTHAN      : 100
SMALLTHAN            : 99
STRING               : 59
SUBTRACT             : 107
SUM                  : 106
TIMES                : 111
TRUE                 : 79
TWODOTS              : 13 27 40 48 49
VAR                  : 27
WHILE                : 74
error                : 

Nonterminals, with rules where they appear

add_end_if           : 121 122
add_gotof            : 121 122
alt2call             : 53
alt2class            : 12 15 16
alt2const            : 20 23 24
alt2func             : 37
alt3func             : 37 42 43
altcall              : 52 55 70 71
altclass             : 12
altcondition         : 121 122 122 123
altconst             : 20
altexp               : 105 106 107
altexpresion         : 93
altexpresion2        : 94
altfunc              : 37
altmain              : 7 8 9
altparams            : 48 49
altprogram           : 1 2 3 4
alttermino           : 110 111 112
altwhile             : 74 75
altwrite             : 116 117
array                : 29
array2               : 32
assign               : 62
callfunc             : 85 90
class                : 2
condition            : 63
constructor          : 17
empty                : 14 22 31 33 35 39 41 50 54 56 88 95 108 113
empty_pv             : 32 34 62 63 64 65 66 67 68
estatuto             : 9 24 43 75 123
exp                  : 93 94
expresion            : 32 34 53 70 71 74 116 117 119 121 122 127 128
factor               : 109 110 111 112
function             : 4 16
listids              : 27 30
listidsalty          : 29
main                 : 5
params               : 21 38
program              : 0
read                 : 65
remove_class_scope   : 5 17
remove_function_scope : 44
return               : 66
save_class           : 12
save_comp            : 78 115 127
save_const           : 77
save_constructor     : 20
save_function        : 37
save_main            : 7
save_op              : 94 106 107 111 112 115 116 117 119 119 127 128
save_params          : 48 49
save_program         : 1
save_var_name        : 29
save_vars            : 27
store_params         : 20 37
termino              : 104 105 106 107
type                 : 27 40 48 49
var                  : 3 8 15 23 42
varcall              : 120
varcomp1             : 84 89
varcomp2             : 86
varcomp3             : 87
varcomplicated       : 78
varcte               : 77
voidcall             : 67
while                : 68
write                : 64

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID save_program SEMICOLON altprogram

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID save_program SEMICOLON altprogram

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . save_program SEMICOLON altprogram
    (6) save_program -> .

    SEMICOLON       reduce using rule 6 (save_program -> .)

    save_program                   shift and go to state 4

state 4

    (1) program -> PROGRAM ID save_program . SEMICOLON altprogram

    SEMICOLON       shift and go to state 5


state 5

    (1) program -> PROGRAM ID save_program SEMICOLON . altprogram
    (2) altprogram -> . class altprogram
    (3) altprogram -> . var altprogram
    (4) altprogram -> . function altprogram
    (5) altprogram -> . main remove_class_scope
    (12) class -> . CLASS ID altclass save_class OPENCURLY alt2class
    (27) var -> . VAR listids TWODOTS type save_vars SEMICOLON
    (37) function -> . FUNC ID OPENPAREN altfunc CLOSEPAREN alt2func save_function store_params OPENCURLY alt3func
    (7) main -> . MAIN save_main OPENPAREN CLOSEPAREN OPENCURLY altmain

    CLASS           shift and go to state 11
    VAR             shift and go to state 12
    FUNC            shift and go to state 13
    MAIN            shift and go to state 14

    altprogram                     shift and go to state 6
    class                          shift and go to state 7
    var                            shift and go to state 8
    function                       shift and go to state 9
    main                           shift and go to state 10

state 6

    (1) program -> PROGRAM ID save_program SEMICOLON altprogram .

    $end            reduce using rule 1 (program -> PROGRAM ID save_program SEMICOLON altprogram .)


state 7

    (2) altprogram -> class . altprogram
    (2) altprogram -> . class altprogram
    (3) altprogram -> . var altprogram
    (4) altprogram -> . function altprogram
    (5) altprogram -> . main remove_class_scope
    (12) class -> . CLASS ID altclass save_class OPENCURLY alt2class
    (27) var -> . VAR listids TWODOTS type save_vars SEMICOLON
    (37) function -> . FUNC ID OPENPAREN altfunc CLOSEPAREN alt2func save_function store_params OPENCURLY alt3func
    (7) main -> . MAIN save_main OPENPAREN CLOSEPAREN OPENCURLY altmain

    CLASS           shift and go to state 11
    VAR             shift and go to state 12
    FUNC            shift and go to state 13
    MAIN            shift and go to state 14

    class                          shift and go to state 7
    altprogram                     shift and go to state 15
    var                            shift and go to state 8
    function                       shift and go to state 9
    main                           shift and go to state 10

state 8

    (3) altprogram -> var . altprogram
    (2) altprogram -> . class altprogram
    (3) altprogram -> . var altprogram
    (4) altprogram -> . function altprogram
    (5) altprogram -> . main remove_class_scope
    (12) class -> . CLASS ID altclass save_class OPENCURLY alt2class
    (27) var -> . VAR listids TWODOTS type save_vars SEMICOLON
    (37) function -> . FUNC ID OPENPAREN altfunc CLOSEPAREN alt2func save_function store_params OPENCURLY alt3func
    (7) main -> . MAIN save_main OPENPAREN CLOSEPAREN OPENCURLY altmain

    CLASS           shift and go to state 11
    VAR             shift and go to state 12
    FUNC            shift and go to state 13
    MAIN            shift and go to state 14

    var                            shift and go to state 8
    altprogram                     shift and go to state 16
    class                          shift and go to state 7
    function                       shift and go to state 9
    main                           shift and go to state 10

state 9

    (4) altprogram -> function . altprogram
    (2) altprogram -> . class altprogram
    (3) altprogram -> . var altprogram
    (4) altprogram -> . function altprogram
    (5) altprogram -> . main remove_class_scope
    (12) class -> . CLASS ID altclass save_class OPENCURLY alt2class
    (27) var -> . VAR listids TWODOTS type save_vars SEMICOLON
    (37) function -> . FUNC ID OPENPAREN altfunc CLOSEPAREN alt2func save_function store_params OPENCURLY alt3func
    (7) main -> . MAIN save_main OPENPAREN CLOSEPAREN OPENCURLY altmain

    CLASS           shift and go to state 11
    VAR             shift and go to state 12
    FUNC            shift and go to state 13
    MAIN            shift and go to state 14

    function                       shift and go to state 9
    altprogram                     shift and go to state 17
    class                          shift and go to state 7
    var                            shift and go to state 8
    main                           shift and go to state 10

state 10

    (5) altprogram -> main . remove_class_scope
    (19) remove_class_scope -> .

    $end            reduce using rule 19 (remove_class_scope -> .)

    remove_class_scope             shift and go to state 18

state 11

    (12) class -> CLASS . ID altclass save_class OPENCURLY alt2class

    ID              shift and go to state 19


state 12

    (27) var -> VAR . listids TWODOTS type save_vars SEMICOLON
    (29) listids -> . ID save_var_name array listidsalty

    ID              shift and go to state 21

    listids                        shift and go to state 20

state 13

    (37) function -> FUNC . ID OPENPAREN altfunc CLOSEPAREN alt2func save_function store_params OPENCURLY alt3func

    ID              shift and go to state 22


state 14

    (7) main -> MAIN . save_main OPENPAREN CLOSEPAREN OPENCURLY altmain
    (11) save_main -> .

    OPENPAREN       reduce using rule 11 (save_main -> .)

    save_main                      shift and go to state 23

state 15

    (2) altprogram -> class altprogram .

    $end            reduce using rule 2 (altprogram -> class altprogram .)


state 16

    (3) altprogram -> var altprogram .

    $end            reduce using rule 3 (altprogram -> var altprogram .)


state 17

    (4) altprogram -> function altprogram .

    $end            reduce using rule 4 (altprogram -> function altprogram .)


state 18

    (5) altprogram -> main remove_class_scope .

    $end            reduce using rule 5 (altprogram -> main remove_class_scope .)


state 19

    (12) class -> CLASS ID . altclass save_class OPENCURLY alt2class
    (13) altclass -> . TWODOTS ID
    (14) altclass -> . empty
    (129) empty -> .

    TWODOTS         shift and go to state 25
    OPENCURLY       reduce using rule 129 (empty -> .)

    altclass                       shift and go to state 24
    empty                          shift and go to state 26

state 20

    (27) var -> VAR listids . TWODOTS type save_vars SEMICOLON

    TWODOTS         shift and go to state 27


state 21

    (29) listids -> ID . save_var_name array listidsalty
    (36) save_var_name -> .

    OPENBRACKET     reduce using rule 36 (save_var_name -> .)
    COMMA           reduce using rule 36 (save_var_name -> .)
    TWODOTS         reduce using rule 36 (save_var_name -> .)

    save_var_name                  shift and go to state 28

state 22

    (37) function -> FUNC ID . OPENPAREN altfunc CLOSEPAREN alt2func save_function store_params OPENCURLY alt3func

    OPENPAREN       shift and go to state 29


state 23

    (7) main -> MAIN save_main . OPENPAREN CLOSEPAREN OPENCURLY altmain

    OPENPAREN       shift and go to state 30


state 24

    (12) class -> CLASS ID altclass . save_class OPENCURLY alt2class
    (18) save_class -> .

    OPENCURLY       reduce using rule 18 (save_class -> .)

    save_class                     shift and go to state 31

state 25

    (13) altclass -> TWODOTS . ID

    ID              shift and go to state 32


state 26

    (14) altclass -> empty .

    OPENCURLY       reduce using rule 14 (altclass -> empty .)


state 27

    (27) var -> VAR listids TWODOTS . type save_vars SEMICOLON
    (57) type -> . INT
    (58) type -> . FLOAT
    (59) type -> . STRING
    (60) type -> . ID
    (61) type -> . BOOL

    INT             shift and go to state 34
    FLOAT           shift and go to state 35
    STRING          shift and go to state 36
    ID              shift and go to state 37
    BOOL            shift and go to state 38

    type                           shift and go to state 33

state 28

    (29) listids -> ID save_var_name . array listidsalty
    (32) array -> . OPENBRACKET expresion CLOSEBRACKET empty_pv array2
    (33) array -> . empty
    (129) empty -> .

    OPENBRACKET     shift and go to state 40
    COMMA           reduce using rule 129 (empty -> .)
    TWODOTS         reduce using rule 129 (empty -> .)

    array                          shift and go to state 39
    empty                          shift and go to state 41

state 29

    (37) function -> FUNC ID OPENPAREN . altfunc CLOSEPAREN alt2func save_function store_params OPENCURLY alt3func
    (38) altfunc -> . params
    (39) altfunc -> . empty
    (48) params -> . ID TWODOTS type save_params altparams
    (129) empty -> .

    ID              shift and go to state 42
    CLOSEPAREN      reduce using rule 129 (empty -> .)

    altfunc                        shift and go to state 43
    params                         shift and go to state 44
    empty                          shift and go to state 45

state 30

    (7) main -> MAIN save_main OPENPAREN . CLOSEPAREN OPENCURLY altmain

    CLOSEPAREN      shift and go to state 46


state 31

    (12) class -> CLASS ID altclass save_class . OPENCURLY alt2class

    OPENCURLY       shift and go to state 47


state 32

    (13) altclass -> TWODOTS ID .

    OPENCURLY       reduce using rule 13 (altclass -> TWODOTS ID .)


state 33

    (27) var -> VAR listids TWODOTS type . save_vars SEMICOLON
    (28) save_vars -> .

    SEMICOLON       reduce using rule 28 (save_vars -> .)

    save_vars                      shift and go to state 48

state 34

    (57) type -> INT .

    SEMICOLON       reduce using rule 57 (type -> INT .)
    COMMA           reduce using rule 57 (type -> INT .)
    CLOSEPAREN      reduce using rule 57 (type -> INT .)
    OPENCURLY       reduce using rule 57 (type -> INT .)


state 35

    (58) type -> FLOAT .

    SEMICOLON       reduce using rule 58 (type -> FLOAT .)
    COMMA           reduce using rule 58 (type -> FLOAT .)
    CLOSEPAREN      reduce using rule 58 (type -> FLOAT .)
    OPENCURLY       reduce using rule 58 (type -> FLOAT .)


state 36

    (59) type -> STRING .

    SEMICOLON       reduce using rule 59 (type -> STRING .)
    COMMA           reduce using rule 59 (type -> STRING .)
    CLOSEPAREN      reduce using rule 59 (type -> STRING .)
    OPENCURLY       reduce using rule 59 (type -> STRING .)


state 37

    (60) type -> ID .

    SEMICOLON       reduce using rule 60 (type -> ID .)
    COMMA           reduce using rule 60 (type -> ID .)
    CLOSEPAREN      reduce using rule 60 (type -> ID .)
    OPENCURLY       reduce using rule 60 (type -> ID .)


state 38

    (61) type -> BOOL .

    SEMICOLON       reduce using rule 61 (type -> BOOL .)
    COMMA           reduce using rule 61 (type -> BOOL .)
    CLOSEPAREN      reduce using rule 61 (type -> BOOL .)
    OPENCURLY       reduce using rule 61 (type -> BOOL .)


state 39

    (29) listids -> ID save_var_name array . listidsalty
    (30) listidsalty -> . COMMA listids
    (31) listidsalty -> . empty
    (129) empty -> .

    COMMA           shift and go to state 50
    TWODOTS         reduce using rule 129 (empty -> .)

    listidsalty                    shift and go to state 49
    empty                          shift and go to state 51

state 40

    (32) array -> OPENBRACKET . expresion CLOSEBRACKET empty_pv array2
    (93) expresion -> . exp altexpresion
    (104) exp -> . termino
    (105) exp -> . termino altexp
    (109) termino -> . factor
    (110) termino -> . factor alttermino
    (119) factor -> . OPENPAREN save_op expresion CLOSEPAREN save_op
    (120) factor -> . varcall
    (77) varcall -> . varcte save_const
    (78) varcall -> . varcomplicated save_comp
    (79) varcte -> . TRUE
    (80) varcte -> . FALSE
    (81) varcte -> . CTEFLOAT
    (82) varcte -> . CTESTRING
    (83) varcte -> . CTEINT
    (84) varcomplicated -> . varcomp1
    (85) varcomplicated -> . callfunc
    (86) varcomp1 -> . ID varcomp2
    (52) callfunc -> . ID OPENPAREN altcall CLOSEPAREN

    OPENPAREN       shift and go to state 56
    TRUE            shift and go to state 60
    FALSE           shift and go to state 61
    CTEFLOAT        shift and go to state 62
    CTESTRING       shift and go to state 63
    CTEINT          shift and go to state 64
    ID              shift and go to state 67

    expresion                      shift and go to state 52
    exp                            shift and go to state 53
    termino                        shift and go to state 54
    factor                         shift and go to state 55
    varcall                        shift and go to state 57
    varcte                         shift and go to state 58
    varcomplicated                 shift and go to state 59
    varcomp1                       shift and go to state 65
    callfunc                       shift and go to state 66

state 41

    (33) array -> empty .

    COMMA           reduce using rule 33 (array -> empty .)
    TWODOTS         reduce using rule 33 (array -> empty .)


state 42

    (48) params -> ID . TWODOTS type save_params altparams

    TWODOTS         shift and go to state 68


state 43

    (37) function -> FUNC ID OPENPAREN altfunc . CLOSEPAREN alt2func save_function store_params OPENCURLY alt3func

    CLOSEPAREN      shift and go to state 69


state 44

    (38) altfunc -> params .

    CLOSEPAREN      reduce using rule 38 (altfunc -> params .)


state 45

    (39) altfunc -> empty .

    CLOSEPAREN      reduce using rule 39 (altfunc -> empty .)


state 46

    (7) main -> MAIN save_main OPENPAREN CLOSEPAREN . OPENCURLY altmain

    OPENCURLY       shift and go to state 70


state 47

    (12) class -> CLASS ID altclass save_class OPENCURLY . alt2class
    (15) alt2class -> . var alt2class
    (16) alt2class -> . function alt2class
    (17) alt2class -> . constructor CLOSECURLY SEMICOLON remove_class_scope
    (27) var -> . VAR listids TWODOTS type save_vars SEMICOLON
    (37) function -> . FUNC ID OPENPAREN altfunc CLOSEPAREN alt2func save_function store_params OPENCURLY alt3func
    (20) constructor -> . CONSTRUCTOR save_constructor OPENPAREN altconst store_params CLOSEPAREN OPENCURLY alt2const

    VAR             shift and go to state 12
    FUNC            shift and go to state 13
    CONSTRUCTOR     shift and go to state 75

    alt2class                      shift and go to state 71
    var                            shift and go to state 72
    function                       shift and go to state 73
    constructor                    shift and go to state 74

state 48

    (27) var -> VAR listids TWODOTS type save_vars . SEMICOLON

    SEMICOLON       shift and go to state 76


state 49

    (29) listids -> ID save_var_name array listidsalty .

    TWODOTS         reduce using rule 29 (listids -> ID save_var_name array listidsalty .)


state 50

    (30) listidsalty -> COMMA . listids
    (29) listids -> . ID save_var_name array listidsalty

    ID              shift and go to state 21

    listids                        shift and go to state 77

state 51

    (31) listidsalty -> empty .

    TWODOTS         reduce using rule 31 (listidsalty -> empty .)


state 52

    (32) array -> OPENBRACKET expresion . CLOSEBRACKET empty_pv array2

    CLOSEBRACKET    shift and go to state 78


state 53

    (93) expresion -> exp . altexpresion
    (94) altexpresion -> . altexpresion2 save_op exp
    (95) altexpresion -> . empty
    (96) altexpresion2 -> . SAMEAS
    (97) altexpresion2 -> . BIGGERTHAN
    (98) altexpresion2 -> . BIGGEREQUALSTHAN
    (99) altexpresion2 -> . SMALLTHAN
    (100) altexpresion2 -> . SMALLEQUALSTHAN
    (101) altexpresion2 -> . DIFFERENTTHAN
    (102) altexpresion2 -> . AND
    (103) altexpresion2 -> . OR
    (129) empty -> .

    SAMEAS          shift and go to state 82
    BIGGERTHAN      shift and go to state 83
    BIGGEREQUALSTHAN shift and go to state 84
    SMALLTHAN       shift and go to state 85
    SMALLEQUALSTHAN shift and go to state 86
    DIFFERENTTHAN   shift and go to state 87
    AND             shift and go to state 88
    OR              shift and go to state 89
    CLOSEBRACKET    reduce using rule 129 (empty -> .)
    CLOSEPAREN      reduce using rule 129 (empty -> .)
    COMMA           reduce using rule 129 (empty -> .)
    OPENPAREN       reduce using rule 129 (empty -> .)
    TRUE            reduce using rule 129 (empty -> .)
    FALSE           reduce using rule 129 (empty -> .)
    CTEFLOAT        reduce using rule 129 (empty -> .)
    CTESTRING       reduce using rule 129 (empty -> .)
    CTEINT          reduce using rule 129 (empty -> .)
    ID              reduce using rule 129 (empty -> .)
    CLOSECURLY      reduce using rule 129 (empty -> .)
    VAR             reduce using rule 129 (empty -> .)
    IF              reduce using rule 129 (empty -> .)
    OUTPUT          reduce using rule 129 (empty -> .)
    INPUT           reduce using rule 129 (empty -> .)
    RETURN          reduce using rule 129 (empty -> .)
    WHILE           reduce using rule 129 (empty -> .)
    SEMICOLON       reduce using rule 129 (empty -> .)

    altexpresion                   shift and go to state 79
    altexpresion2                  shift and go to state 80
    empty                          shift and go to state 81

state 54

    (104) exp -> termino .
    (105) exp -> termino . altexp
    (106) altexp -> . SUM save_op termino altexp
    (107) altexp -> . SUBTRACT save_op termino altexp
    (108) altexp -> . empty
    (129) empty -> .

  ! reduce/reduce conflict for SAMEAS resolved using rule 104 (exp -> termino .)
  ! reduce/reduce conflict for BIGGERTHAN resolved using rule 104 (exp -> termino .)
  ! reduce/reduce conflict for BIGGEREQUALSTHAN resolved using rule 104 (exp -> termino .)
  ! reduce/reduce conflict for SMALLTHAN resolved using rule 104 (exp -> termino .)
  ! reduce/reduce conflict for SMALLEQUALSTHAN resolved using rule 104 (exp -> termino .)
  ! reduce/reduce conflict for DIFFERENTTHAN resolved using rule 104 (exp -> termino .)
  ! reduce/reduce conflict for AND resolved using rule 104 (exp -> termino .)
  ! reduce/reduce conflict for OR resolved using rule 104 (exp -> termino .)
  ! reduce/reduce conflict for CLOSEBRACKET resolved using rule 104 (exp -> termino .)
  ! reduce/reduce conflict for CLOSEPAREN resolved using rule 104 (exp -> termino .)
  ! reduce/reduce conflict for COMMA resolved using rule 104 (exp -> termino .)
  ! reduce/reduce conflict for OPENPAREN resolved using rule 104 (exp -> termino .)
  ! reduce/reduce conflict for TRUE resolved using rule 104 (exp -> termino .)
  ! reduce/reduce conflict for FALSE resolved using rule 104 (exp -> termino .)
  ! reduce/reduce conflict for CTEFLOAT resolved using rule 104 (exp -> termino .)
  ! reduce/reduce conflict for CTESTRING resolved using rule 104 (exp -> termino .)
  ! reduce/reduce conflict for CTEINT resolved using rule 104 (exp -> termino .)
  ! reduce/reduce conflict for ID resolved using rule 104 (exp -> termino .)
  ! reduce/reduce conflict for CLOSECURLY resolved using rule 104 (exp -> termino .)
  ! reduce/reduce conflict for VAR resolved using rule 104 (exp -> termino .)
  ! reduce/reduce conflict for IF resolved using rule 104 (exp -> termino .)
  ! reduce/reduce conflict for OUTPUT resolved using rule 104 (exp -> termino .)
  ! reduce/reduce conflict for INPUT resolved using rule 104 (exp -> termino .)
  ! reduce/reduce conflict for RETURN resolved using rule 104 (exp -> termino .)
  ! reduce/reduce conflict for WHILE resolved using rule 104 (exp -> termino .)
  ! reduce/reduce conflict for SEMICOLON resolved using rule 104 (exp -> termino .)
    SAMEAS          reduce using rule 104 (exp -> termino .)
    BIGGERTHAN      reduce using rule 104 (exp -> termino .)
    BIGGEREQUALSTHAN reduce using rule 104 (exp -> termino .)
    SMALLTHAN       reduce using rule 104 (exp -> termino .)
    SMALLEQUALSTHAN reduce using rule 104 (exp -> termino .)
    DIFFERENTTHAN   reduce using rule 104 (exp -> termino .)
    AND             reduce using rule 104 (exp -> termino .)
    OR              reduce using rule 104 (exp -> termino .)
    CLOSEBRACKET    reduce using rule 104 (exp -> termino .)
    CLOSEPAREN      reduce using rule 104 (exp -> termino .)
    COMMA           reduce using rule 104 (exp -> termino .)
    OPENPAREN       reduce using rule 104 (exp -> termino .)
    TRUE            reduce using rule 104 (exp -> termino .)
    FALSE           reduce using rule 104 (exp -> termino .)
    CTEFLOAT        reduce using rule 104 (exp -> termino .)
    CTESTRING       reduce using rule 104 (exp -> termino .)
    CTEINT          reduce using rule 104 (exp -> termino .)
    ID              reduce using rule 104 (exp -> termino .)
    CLOSECURLY      reduce using rule 104 (exp -> termino .)
    VAR             reduce using rule 104 (exp -> termino .)
    IF              reduce using rule 104 (exp -> termino .)
    OUTPUT          reduce using rule 104 (exp -> termino .)
    INPUT           reduce using rule 104 (exp -> termino .)
    RETURN          reduce using rule 104 (exp -> termino .)
    WHILE           reduce using rule 104 (exp -> termino .)
    SEMICOLON       reduce using rule 104 (exp -> termino .)
    SUM             shift and go to state 91
    SUBTRACT        shift and go to state 92

  ! SAMEAS          [ reduce using rule 129 (empty -> .) ]
  ! BIGGERTHAN      [ reduce using rule 129 (empty -> .) ]
  ! BIGGEREQUALSTHAN [ reduce using rule 129 (empty -> .) ]
  ! SMALLTHAN       [ reduce using rule 129 (empty -> .) ]
  ! SMALLEQUALSTHAN [ reduce using rule 129 (empty -> .) ]
  ! DIFFERENTTHAN   [ reduce using rule 129 (empty -> .) ]
  ! AND             [ reduce using rule 129 (empty -> .) ]
  ! OR              [ reduce using rule 129 (empty -> .) ]
  ! CLOSEBRACKET    [ reduce using rule 129 (empty -> .) ]
  ! CLOSEPAREN      [ reduce using rule 129 (empty -> .) ]
  ! COMMA           [ reduce using rule 129 (empty -> .) ]
  ! OPENPAREN       [ reduce using rule 129 (empty -> .) ]
  ! TRUE            [ reduce using rule 129 (empty -> .) ]
  ! FALSE           [ reduce using rule 129 (empty -> .) ]
  ! CTEFLOAT        [ reduce using rule 129 (empty -> .) ]
  ! CTESTRING       [ reduce using rule 129 (empty -> .) ]
  ! CTEINT          [ reduce using rule 129 (empty -> .) ]
  ! ID              [ reduce using rule 129 (empty -> .) ]
  ! CLOSECURLY      [ reduce using rule 129 (empty -> .) ]
  ! VAR             [ reduce using rule 129 (empty -> .) ]
  ! IF              [ reduce using rule 129 (empty -> .) ]
  ! OUTPUT          [ reduce using rule 129 (empty -> .) ]
  ! INPUT           [ reduce using rule 129 (empty -> .) ]
  ! RETURN          [ reduce using rule 129 (empty -> .) ]
  ! WHILE           [ reduce using rule 129 (empty -> .) ]
  ! SEMICOLON       [ reduce using rule 129 (empty -> .) ]

    altexp                         shift and go to state 90
    empty                          shift and go to state 93

state 55

    (109) termino -> factor .
    (110) termino -> factor . alttermino
    (111) alttermino -> . TIMES save_op factor alttermino
    (112) alttermino -> . DIV save_op factor alttermino
    (113) alttermino -> . empty
    (129) empty -> .

